--- a/.github/workflows/rcpr.yaml
+++ b/.github/workflows/rcpr.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3
     - run: |
-        make build
-        ./rcpr
+        make install
+        rcpr
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
