--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,10 +13,13 @@ jobs:
         go-version: 1.x
     - name: checkout
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - name: release
+    - name: build
+      run: |
+        make crossbuild
+    - name: upload
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.github_token }}
-      run: |
-        make crossbuild upload
+      with:
+        files: dist/*
+        draft: false
