--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -15,9 +15,15 @@ jobs:
       uses: actions/checkout@v3
       with:
         token: ${{ secrets.GH_PAT }}
-    - run: |
+    - id: tagpr
+      run: |
         make install
         echo '::echo::on'
         tagpr
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+    - uses: haya14busa/action-update-semver
+      if: "!steps.tagpr.outputs.tag != ''"
+      with:
+        tag: ${{ steps.tagpr.outputs.tag }}
+        major_version_tag_only: true
