--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -22,7 +22,7 @@ jobs:
         tagpr
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-    - uses: haya14busa/action-update-semver
+    - uses: haya14busa/action-update-semver@v1
       if: "!steps.tagpr.outputs.tag != ''"
       with:
         tag: ${{ steps.tagpr.outputs.tag }}
