--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -23,7 +23,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
     - uses: haya14busa/action-update-semver@v1
-      if: "!steps.tagpr.outputs.tag != ''"
+      if: "steps.tagpr.outputs.tag != ''"
       with:
         tag: ${{ steps.tagpr.outputs.tag }}
         major_version_tag_only: true
