--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -11,14 +11,20 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.x
+    - name: Generate token
+      id: generate_token
+      uses: tibdex/github-app-token@v1
+      with:
+        app_id: ${{ secrets.APP_ID }}
+        private_key: ${{ secrets.PRIVATE_KEY }}
     - name: checkout
       uses: actions/checkout@v3
       with:
-        token: ${{ secrets.GH_PAT }}
-    - id: tagpr
+        token: ${{ steps.generate_token.outputs.token }}
+    - name: tagpr
       run: |
         make install
         echo '::echo::on'
         tagpr
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
