--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,13 @@
 name: release
+
 on:
   push:
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
+
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
