--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -1,8 +1,14 @@
 name: tagpr
+
 on:
   push:
     branches:
     - "main"
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   tagpr:
     runs-on: ubuntu-latest
