--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,15 +16,17 @@ jobs:
         - ubuntu-latest
         - macOS-latest
     steps:
-    - name: setup go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.x
     - name: checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
+      with:
+        persist-credentials: false
+    - name: setup go
+      uses: actions/setup-go@v6
+      with:
+        go-version-file: go.mod
     - name: test
       run: go test -race -coverprofile coverage.out -covermode atomic ./...
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Send coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v5
