--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,12 +3,18 @@ on:
   push:
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
+permissions:
+  contents: write
+  packages: write
 jobs:
   release:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - name: checkout
       uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      with:
+        persist-credentials: false
     - name: setup go
       uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
       with:
