--- a/.github/workflows/tagpr.yaml
+++ b/.github/workflows/tagpr.yaml
@@ -6,7 +6,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  issues: write
+  issues: read
 jobs:
   tagpr:
     runs-on: ubuntu-latest
@@ -20,7 +20,7 @@ jobs:
         private-key: ${{ secrets.PRIVATE_KEY }}
         permission-contents: write
         permission-pull-requests: write
-        permission-issues: write
+        permission-issues: read
     - name: checkout
       uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
